--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_fe87a23 {clip:rect(0px,1280px,720px,0px);}#txt0_fe87a23,#txt1_fe87a23,#txt2_fe87a23 {font-family:fnt4; font-size:58.667px; line-height:83px; color:#512373;}#txt3_fe87a23 {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#eb99e7;}
+#spr1_2262e9a7 {clip:rect(0px,1280px,720px,0px);}#txt0_2262e9a7,#txt1_2262e9a7,#txt2_2262e9a7 {font-family:fnt4; font-size:58.667px; line-height:83px; color:#512373;}#txt3_2262e9a7 {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#eb99e7;}
