--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_2262e9a7 {clip:rect(0px,1280px,720px,0px);}#txt0_2262e9a7,#txt1_2262e9a7,#txt2_2262e9a7 {font-family:fnt4; font-size:58.667px; line-height:83px; color:#512373;}#txt3_2262e9a7 {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#eb99e7;}
+#spr1_22c1adaa {clip:rect(0px,1280px,720px,0px);}#txt0_22c1adaa,#txt1_22c1adaa,#txt2_22c1adaa {font-family:fnt4; font-size:58.667px; line-height:83px; color:#512373;}#txt3_22c1adaa {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#eb99e7;}
